Fix breaking heading on Firefox

--- a/src/components/AccordionItem.module.scss
+++ b/src/components/AccordionItem.module.scss
@@ -2,7 +2,6 @@
 
 .container {
     .header {
-        gap: 2.4rem;
         display: flex;
         cursor: pointer;
         align-items: center;
